<resources>
    <string name="app_name">Weather</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="location_text">Claremont</string>
    <string name="temp_high_label">80°</string>
    <string name="temp_low_label">60°</string>
    <string name="edit_text_city_hint">Enter a name of a city</string>
    <string name="button_get_weather_text">Get weather</string>
    <string name="current_temp_default_text">70</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="get_weather_text">CLICK TO GET THE WEATHER</string>
</resources>
